refactor: update ContractDefinitions.request method